# AssetsManager

./: .gitignore  AssetsManager.icns  AssetsManager.py  LICENSE  LICENSE.AUDIT.md  LICENSE.LIST  pyproject.toml  requirements.txt
.claude/skills/license-audit/: SKILL.md
.cursor/rules/: assetsmanager-coding-standards.mdc  license-audit.mdc
.github/workflows/: release.yml
bridge/: __init__.py  drag_drop_handler.py  library_model.py  preview_controller.py  scan_controller.py  tag_controller.py
core/: __init__.py  database.py  file_ops.py  interfaces.py  models.py  scanner.py  tag_service.py  thumbnail.py
qml/: main.qml
qml/components/: AssetCard.qml  AssetGrid.qml  ImportOverlay.qml  PreviewOverlay.qml  SideBar.qml  TopBar.qml
